--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,18 @@
 <header class="site-header" role="banner">
 
   <div class="wrapper">
-    <img src="assets/2017_Kammer_Person.jpg" width="300px">
-    <h1>{{ site.title }}</h1>
+    <a href="{{site.url}}"><div class="portrait-container"></div></a>
+    <h1><a href="{{site.url}}">{{ site.title }}</a></h1>
     <h2>Technische Visualistik / Visual Engineeing<br />
         University of Applied Sciences Dresden</h2>
+    <p class="noindent spacing iconbar">
+        <a href="https://dkammer.org"><i class="fas fa-user-circle"></i></a>
+        <a href="mailto:kammer@htw-dresden.de"><i class="fas fa-envelope-square"></i></a>
+        <a href="https://www.xing.com/profile/Dietrich_Kammer2"><i class="fab fa-xing-square"></i></a>
+        <a href="https://github.com/dkammer"><i class="fab fa-github-square"></i></a>
+        <a href="https://twitter.com/kammerjaeger"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://scholar.google.de/citations?user=zlhrEJ8AAAAJ"><i class="fab fa-google"></i></a>
+        <a href="https://www.researchgate.net/profile/Dietrich_Kammer"><i class="fab fa-researchgate"></i></a>
+    </p>
   </div>
 </header>
