--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -34,12 +34,15 @@ body {
  * Set `margin-bottom` to maintain vertical rhythm
  */
 h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
+blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
   margin-bottom: $spacing-unit / 2;
 }
 
+p {
+  text-indent: $spacing-unit;
+}
 
 
 /**
@@ -93,8 +96,22 @@ li {
 /**
  * Headings
  */
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
   font-weight: $base-font-weight;
+}
+
+h1 {
+  font-size: 1.5em;
+  font-weight: $base-font-weight * 2;
+  margin-bottom: 0;
+
+  a {
+    color: $text-color;
+
+    &:visited {
+      color: $text-color;
+    }
+  }
 }
 
 
@@ -112,7 +129,7 @@ a {
 
   &:hover {
     color: $text-color;
-    text-decoration: underline;
+    text-decoration: none;
   }
 
   .social-media-list &:hover {
@@ -257,6 +274,16 @@ table {
 
 .center {
   text-align: center;
+}
+
+.spacing {
+  margin-bottom: $spacing-unit / 2;
+  margin-top: $spacing-unit / 2;
+
+}
+
+.noindent {
+  text-indent: 0;
 }
 
 .uppercase {
