--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -28,6 +28,21 @@
   }
 }
 
+.iconbar {
+  font-size: $base-font-size * 3;
+  letter-spacing: -2px;
+  a {
+    color: $text-color;
+    &:visited {
+      color: $text-color;
+    }  
+    &:hover {
+      color: $brand-color;
+      text-decoration: none;
+    }
+  }
+}
+
 .site-nav {
   float: right;
   line-height: $base-line-height * $base-font-size * 2.25;
@@ -104,6 +119,16 @@
   }
 }
 
+.portrait-container {
+  background-image: url('2017_Kammer_Person.jpg');
+  background-position-y: 20px;
+  background-position-x: -80px;
+  background-size: 250px;
+  background-repeat: no-repeat;
+  width: 130px;
+  height: 150px;
+  margin-bottom: $spacing-unit / 2;
+}  
 
 
 /**
@@ -208,7 +233,25 @@
   @include relative-font-size(1.5);
 }
 
+/**
+ * Publications
+ */
 
+.publications-title {
+  font-size: relative-font-size(1.5);
+  text-transform: uppercase;
+  text-align: center;
+} 
+
+.publications-title::after {
+  content: ""; /* This is necessary for the pseudo element to work. */ 
+  display: block; /* This will put the pseudo element on its own line. */
+  margin: 0 auto; /* This will center the border. */
+  width: 120px; /* Change this to whatever width you want. */
+  padding-top: $spacing-unit / 2; /* This creates some space between the element and the border. */
+  border-bottom: 1px solid $grey-color-dark; /* This creates the border. Replace black with whatever color you want. */
+  margin-bottom: $spacing-unit;
+}
 
 /**
  * Posts
