--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="site-header" role="banner">
 
   <div class="wrapper">
-    <a href="{{site.url}}"><div class="portrait-container"></div></a>
-    <h1><a href="{{site.url}}">{{ site.title }}</a></h1>
+    <a href="{{page.url}}"><div class="portrait-container"></div></a>
+    <h1><a href="{{page.url}}">{{ site.title }}</a></h1>
     <h2>Technische Visualistik / Visual Engineeing<br />
         University of Applied Sciences Dresden</h2>
     <p class="noindent spacing iconbar">
