fix backlink in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header" role="banner">
 
   <div class="wrapper">
-    <a href="{{page.url}}"><div class="portrait-container"></div></a>
+    <a href="https://dkammer.org"><div class="portrait-container"></div></a>
     <h1><a href="{{page.url}}">{{ site.title }}</a></h1>
     <h2>Technische Visualistik / Visual Engineeing<br />
         University of Applied Sciences Dresden</h2>
