--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     <a href="{{site.url}}"><div class="portrait-container"></div></a>
     <h1><a href="{{site.url}}">{{ site.title }}</a></h1>
-    <h2>Technische Visualistik / Visual Engineeing<br />
+    <h2>Technische Visualistik / Visual Engineering<br />
         University of Applied Sciences Dresden</h2>
     <p class="noindent spacing iconbar">
         <a href="https://dkammer.org"><i class="fas fa-user-circle"></i></a>
