Update Twitter Account Data

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
         <a href="mailto:kammer@htw-dresden.de"><i class="fas fa-envelope-square"></i></a>
         <a href="https://www.xing.com/profile/Dietrich_Kammer2"><i class="fab fa-xing-square"></i></a>
         <a href="https://github.com/dkammer"><i class="fab fa-github-square"></i></a>
-        <a href="https://twitter.com/kammerjaeger"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://twitter.com/vis_engineering"><i class="fab fa-twitter-square"></i></a>
         <a href="https://scholar.google.de/citations?user=zlhrEJ8AAAAJ"><i class="fab fa-google"></i></a>
         <a href="https://www.researchgate.net/profile/Dietrich_Kammer"><i class="fab fa-researchgate"></i></a>
     </p>
