add orcid id qr code to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
         <a href="https://twitter.com/vis_engineering"><i class="fab fa-twitter-square"></i></a>
         <a href="https://scholar.google.de/citations?user=zlhrEJ8AAAAJ"><i class="fab fa-google"></i></a>
         <a href="https://www.researchgate.net/profile/Dietrich_Kammer"><i class="fab fa-researchgate"></i></a>
+        <a href="https://orcid.org/0000-0002-3822-6043"><img class="icon-png" src="{{ "/assets/orcid.png" | relative_url }}" alt="ORCID ID" /></a>
     </p>
   </div>
 </header>
