--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -43,6 +43,12 @@
   }
 }
 
+.icon-png {
+  height: 39px;
+  vertical-align: top;
+  margin-top: 13px;
+}
+
 .site-nav {
   float: right;
   line-height: $base-line-height * $base-font-size * 2.25;
