--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,13 +2,17 @@
 
 // Define defaults for each variable.
 
-$base-font-family: "Georgia", "Times" !default;
-$base-font-size:   15px !default;
+$base-font-family: "Roboto", "Arial" !default;
+$base-font-size:   18px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
-$spacing-unit:     30px !default;
+$spacing-subunit:  20px !default;
+$spacing-unit:     42px !default;
+$spacing-grid:     60px !default;
+$vertical-space:   90px !default;
+$spacing-inner-padding: 12px !default;
 
 $text-color:       #111 !default;
 $background-back:  #eee !default;
@@ -22,7 +26,7 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 $table-text-align: left !default;
 
 // Width of the content area
-$content-width:    800px !default;
+$content-width:    1024px !default;
 
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
@@ -49,5 +53,6 @@ $on-laptop:        800px !default;
   "minima/base",
   "minima/layout",
   "minima/syntax-highlighting",
-  "minima/fontawesome"
+  "minima/fontawesome",
+  "minima/flex"
 ;
