--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,19 +1,14 @@
 <header class="site-header" role="banner">
 
   <div class="wrapper">
-    <a href="{{site.url}}"><div class="portrait-container"></div></a>
-    <h1><a href="{{site.url}}">{{ site.title }}</a></h1>
-    <h2>Technische Visualistik / Visual Engineering<br />
-        University of Applied Sciences Dresden</h2>
-    <p class="noindent spacing iconbar">
-        <a href="https://dkammer.org"><i class="fas fa-user-circle"></i></a>
-        <a href="mailto:kammer@htw-dresden.de"><i class="fas fa-envelope-square"></i></a>
-        <a href="https://www.xing.com/profile/Dietrich_Kammer2"><i class="fab fa-xing-square"></i></a>
-        <a href="https://github.com/dkammer"><i class="fab fa-github-square"></i></a>
-        <a href="https://twitter.com/vis_engineering"><i class="fab fa-twitter-square"></i></a>
-        <a href="https://scholar.google.de/citations?user=zlhrEJ8AAAAJ"><i class="fab fa-google"></i></a>
-        <a href="https://www.researchgate.net/profile/Dietrich_Kammer"><i class="fab fa-researchgate"></i></a>
-        <a href="https://orcid.org/0000-0002-3822-6043"><img class="icon-png" src="{{ "/assets/orcid.png" | relative_url }}" alt="ORCID ID" /></a>
-    </p>
+    <div class="flex-container">
+      <div>
+        <h1><a href="{{site.url}}">{{ site.title }}</a></h1>
+      </div>
+      <div class="flex-item-header">
+        <h2 class="rightalign">Technische Visualistik / Visual Engineering<br />
+            University of Applied Sciences Dresden</h2>
+      </div>
+    </div>
   </div>
 </header>
