--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -28,6 +28,7 @@ $table-text-align: left !default;
 // Width of the content area
 $content-width:    1024px !default;
 
+$on-tablet:        1024px !default;
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
 
