--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -162,6 +162,7 @@
   background-repeat: no-repeat;
   width: $spacing-subunit * 2 + $spacing-grid * 3;
   height: $spacing-subunit * 2 + $spacing-grid * 3;
+  margin-top: 5px;
   margin-bottom: $spacing-unit / 2;
 }  
 
