--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -7,7 +7,10 @@ layout: default
 {% assign firstpubl = true %}
 <div class="flex-container__publications">
   <div class="col3">
-    <h3 class="baseline-correction">Publications</h3>
+    <h3 class="baseline-correction">
+      Publications<br/ >
+      <a href="{{ site.url }}"><i class="fa fa-arrow-left"></i> Back</a>
+    </h3>
   </div>
   {%- for publ in sorted -%}
   <div class="flex-container">
