--- a/_sass/minima/_flex.scss
+++ b/_sass/minima/_flex.scss
@@ -59,6 +59,20 @@
 }
 
 @include media-query($on-tablet) {
+    body {
+        @include relative-font-size(0.8);
+    }
+    h1 {
+        @include relative-font-size-title(0.8);
+    }
+    
+    h2, h3 {
+        @include relative-font-size-heading(0.8);
+    }
+    
+    .small {
+        @include relative-font-size-small(0.8);
+    }    
     .flex-container {
         display: flex;
         flex-flow: column;
