--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -14,20 +14,6 @@
   }
 }
 
-.site-title {
-  @include relative-font-size(1.625);
-  font-weight: 300;
-  line-height: $base-line-height * $base-font-size * 2.25;
-  letter-spacing: -1px;
-  margin-bottom: 0;
-  float: left;
-
-  &,
-  &:visited {
-    color: $grey-color-dark;
-  }
-}
-
 .iconbar {
   font-size: $base-font-size * 2.5;
   letter-spacing: -2px;
@@ -49,7 +35,7 @@
 }
 
 .small {
-  font-size: 14px;
+  font-size: $base-font-size-small;
 }
 
 .years {
