projects to grants update order

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,7 +56,7 @@ layout: default
   
   <div class="flex-container bottom-padding">
     <div class="col3">
-      <h3 class="baseline-correction">Projects</h3>
+      <h3 class="baseline-correction">Research Grants</h3>
     </div>
     {%- for project in site.projects reversed -%}
     <div class="flex-container">
