--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -108,7 +108,7 @@ layout: default
         {% else %}
           <div class="col7 offset3">
         {% endif %}
-            <p class="line-space">
+            <p class="line-space dont-break-out">
               {{ publ.author }} ({{ publ.year }}). <a href="{{publ.link}}">{{ publ.title }}</a>. In: {{ publ.venue }}. {{ publ.link }}
             </p>
           </div>
