--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -20,7 +20,7 @@ layout: default
       {% else %}
         <div class="col7 offset3">
       {% endif %}
-          <p class="small line-space">
+          <p class="small line-space dont-break-out">
             {{ publ.author }} ({{ publ.year }}). <a href="{{publ.link}}">{{ publ.title }}</a>. In: {{ publ.venue }}. {{ publ.link }}
           </p>
         </div>
