--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,5 +10,13 @@ layout: default
     </div>
     {%- endif -%}
 
+    <div class="bottom-padding">
+        <img src="{{site.baseurl}}/assets/images/{{ page.image }}">
+    </div>
+    
+    <div class="offset3 col9 line-space">
+        {{ page.description }}
+    </div>
+
     {{ page.content }}
 </div>
