--- a/_sass/minima/_flex.scss
+++ b/_sass/minima/_flex.scss
@@ -49,6 +49,10 @@
     width: $spacing-subunit * 8 + $spacing-grid * 9;
 }
 
+.col8 {
+    width: $spacing-subunit * 7 + $spacing-grid * 8;
+}
+
 .col7 {
     width: $spacing-subunit * 6 + $spacing-grid * 7;
 }
