--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -52,6 +52,7 @@
   &__inactive {
     background-color: #aaa;
     padding: $spacing-inner-padding;
+    margin-bottom: $spacing-subunit;
   }
 }
 
