affil style fix

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,14 +26,15 @@ layout: default
     </div>
   </div>
 
-  <div class="flex-container bottom-padding">
+  <div class="flex-container__affiliations bottom-padding">
     <div class="col3">
       <h3 class="baseline-correction">Affiliations</h3>
     </div>
     {% assign counter=0 %}
     {%- for affil in site.affiliations reversed -%}
       {%- if affil.status=="active" or affil.status=="inactive" -%}
-      <div class="col3-padding {% if counter < 3 %}left-padding{% else %}offset3{% endif %} affiliation{% unless affil.status=="active" %}__inactive{% endunless %}">
+      {% assign rowcheck = counter | modulo: 3 %}
+      <div class="col3-padding {% if rowcheck!=0 or counter==0 %}left-padding{% else %}offset3{% endif %} affiliation{% unless affil.status=="active" %}__inactive{% endunless %}">
         <div>
           {%- if affil.link -%}
           <a class="affillink" href="{{ affil.link }}">
